--- a/package.json
+++ b/package.json
@@ -2,6 +2,9 @@
   "name": "hardhat-project",
   "devDependencies": {
     "@nomicfoundation/hardhat-toolbox": "^2.0.2",
-    "hardhat": "^2.14.0"
+    "@openzeppelin/contracts": "^4.9.0",
+    "dotenv": "^16.1.1",
+    "hardhat": "^2.14.0",
+    "hardhat-deploy": "^0.11.30"
   }
 }
