--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
     "@openzeppelin/contracts": "^4.9.0",
     "dotenv": "^16.1.1",
     "hardhat": "^2.14.0",
-    "hardhat-deploy": "^0.11.30"
+    "hardhat-deploy": "^0.11.30",
+    "web3-utils": "^1.10.0"
   }
 }
